Fixed with changing on page collapse

--- a/css/quickref.css
+++ b/css/quickref.css
@@ -288,6 +288,10 @@ body {
     padding:8px 8px 1px 8px;
 }
 
+.page {
+	width:100%;
+}
+
 /* ------------------------------------------------------------------------- */
 /* Misc */
 /* ------------------------------------------------------------------------- */
